2004-03-18  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_set_editable): call
	gtk_html_drag_dest_set

	* gtkhtml.c (gtk_html_drag_dest_set): new helper function, sets
	drag destination depending on editable state
	(realize): call gtk_html_drag_dest_set

	* htmlengine.c (block_end_cell): make sure the cell doesn't end
	empty. add new flow with an empty text in that case

	* htmlclue.c (html_clue_is_empty): moved from
	HTMLTableCell::html_table_cell_is_empty

	Needed to fix #55735
	
	* htmltokenizer.c (add_unichar): translate characters from range
	128 - 159 from win1252 encoding to unicode as other browsers
	do. yup, we support more brokeness now

	Fixes #55707

2004-03-15  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (thaw_idle): do partial redraw only if widget is
	already realized
	(html_engine_unrealize): remove scheduled thaw idle here and don't
	wait for finalize

2004-03-12  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (EXTRA_DIST): remove pkgconfig_DATA
	(pkgconfig_DATA): create from pkgconfig_in_files

	Fixes #55514

2004-03-09  Radek Doulik  <rodo@ximian.com>

	* htmltext.c (copy): reset selection

	* htmlobject.c (copy): reset selected to FALSE

2004-03-05  Radek Doulik  <rodo@ximian.com>

	* htmlclueflow.c (search): use is_text instead of calling
	html_object_is_text again
	(search_text): fix for utf8, mostly use index instead of characted
	position and bytes length instead of character length
	(search_set_info): ditto

	* htmlengine.c (replace): initialize found_bytes instead of
	found_len

	* htmlsearch.c (set_text): use bytes instead of character length
	(html_search_new): use text_bytes field

	* htmlsearch.h: len --> bytes

	Fixes #54029

2004-03-04  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (cursor_move): do not proceed if we are not in
	editable or caret mode

	Fixes #54037

	* htmlclueflow.c (save_plain): use html_text_is_line_break
	(forward_items): new helper method to travel on text items
	(backward_items): ditto
