@@ -219,6 +219,9 @@ typedef enum {
 	GTK_HTML_COMMAND_CELL_RSPAN_INC,
 	GTK_HTML_COMMAND_CELL_CSPAN_DEC,
 	GTK_HTML_COMMAND_CELL_RSPAN_DEC,
+
+	GTK_HTML_COMMAND_EDITABLE_ON,
+	GTK_HTML_COMMAND_EDITABLE_OFF,
 } GtkHTMLCommandType;
 
 typedef enum {
