@@ -1,3 +1,12 @@
+2004-03-22  Radek Doulik  <rodo@ximian.com>
+
+	* gtkhtml.c (command): added new commands implementation
+
+	* gtkhtml-properties.c: as below
+
+	* gtkhtml-enums.h: added GTK_HTML_COMMAND_EDITABLE_ON,
+	GTK_HTML_COMMAND_EDITABLE_OFF
+
 2004-03-18  Radek Doulik  <rodo@ximian.com>
 
 	* htmlengine.c (html_engine_set_editable): call
